--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Project-specific files
+trash/
+/*.tgz
+package-lock.json
+yarn.lock
+
 # Logs
 logs
 *.log
@@ -80,7 +86,6 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
